--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "bluebird": "^3.5.1",
     "nyc": "^11.1.0",
     "standard": "^10.0.2",
     "standard-version": "^4.2.0",
